--- a/nginx/templates/default.conf
+++ b/nginx/templates/default.conf
@@ -11,10 +11,14 @@ upstream ${NGINX_UPSTREAM_WEB_FRONT_END} {
 }
 
 server {
-    listen ${NGINX_PORT};
-    listen [::]:${NGINX_PORT}; 
+    listen ${NGINX_PORT} ssl http2;
+    listen [::]:${NGINX_PORT} ssl http2;
 
     server_name ${NGINX_SERVER_NAME};
+
+    ssl_protocols TLSv1.2;
+    ssl_certificate /etc/nginx/ssl/_wildcard.${NGINX_SERVER_NAME}.pem;
+    ssl_certificate_key /etc/nginx/ssl/_wildcard.${NGINX_SERVER_NAME}-key.pem;
 
    # Client web application
     location / {
