--- a/nginx/.env
+++ b/nginx/.env
@@ -6,7 +6,7 @@ NGINX_UPSTREAM_WEB_FRONT_END=web_front_end
 # Container names, as in docker-compose
 CONTAINER_FOOAPI=fooapi
 CONTAINER_BARAPI=barapi
-CONTAINER_CLIENT=client
+CONTAINER_CLIENT=host.docker.internal
 # Internal ports, as in docker-compose
 FOOAPI_PORT=5001
 BARAPI_PORT=5002
