Client sur container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '3.8'
 services:
+    # Angular Web front-end
+    client:
+        build:
+            context: ./client
+            args:
+                # Versions of the Docker base images
+                ALPINE_VERSION: alpine3.18
+                NODE_VERSION: 18.17.1
+        # For DEBUG only (direct access bypassing the reverse proxy)
+#        ports:
+#            - "4200:4200"
+        container_name: client
+        depends_on:
+            [barapi, fooapi]
     # NodeJs REST API back-end
     barapi:
         build:
@@ -45,6 +59,5 @@ services:
         container_name: nginx        
         extra_hosts:
             - "host.docker.internal:host-gateway"
-            #- "host.docker.internal:172.17.0.1"
         ports:
             - 443:443
