--- a/nginx/.env
+++ b/nginx/.env
@@ -6,7 +6,10 @@ NGINX_UPSTREAM_WEB_FRONT_END=web_front_end
 # Container names, as in docker-compose
 CONTAINER_FOOAPI=fooapi
 CONTAINER_BARAPI=barapi
-CONTAINER_CLIENT=host.docker.internal
+CONTAINER_CLIENT=client
+
+# In case the client is running on localhost, allows to develop and debug !
+#CONTAINER_CLIENT=host.docker.internal
 # Internal ports, as in docker-compose
 FOOAPI_PORT=5001
 BARAPI_PORT=5002
