Port provient du Dockerfile

--- a/nginx/.env
+++ b/nginx/.env
@@ -10,9 +10,9 @@ CONTAINER_CLIENT=client
 
 # In case the client is running on localhost, allows to develop and debug !
 #CONTAINER_CLIENT=host.docker.internal
-# Internal ports, as in docker-compose
+# Internal ports, as in Dockerfile
 FOOAPI_PORT=5001
-BARAPI_PORT=5002
+BARAPI_PORT=5001
 CLIENT_PORT=4200
 # Routes
 NGINX_ROUTE_1=foo-api
