Port from Dockerfile

--- a/nginx/.env
+++ b/nginx/.env
@@ -7,9 +7,9 @@ NGINX_UPSTREAM_WEB_FRONT_END=web_front_end
 CONTAINER_FOOAPI=fooapi
 CONTAINER_BARAPI=barapi
 CONTAINER_CLIENT=client
-# Internal ports, as in docker-compose
+# Internal ports, as in Dockerfile
 FOOAPI_PORT=5001
-BARAPI_PORT=5002
+BARAPI_PORT=5001
 CLIENT_PORT=4200
 # Routes
 NGINX_ROUTE_1=foo-api
