--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,9 @@ services:
                 # Versions of the Docker base images
                 ALPINE_VERSION: alpine3.18
                 NODE_VERSION: 18.17.1
-        ports:
-            - 5001:5001
+        # For debug purpose, to bypass the proxy
+        #ports:
+        #    - 5001:5001
         container_name: barapi
         depends_on:
             - nginx
@@ -34,8 +35,9 @@ services:
                 # Versions of the Docker base images
                 ALPINE_VERSION: alpine3.18
                 NODE_VERSION: 18.17.1
-        ports:
-            - 5002:5002
+        # For debug purpose, to bypass the proxy
+        #ports:
+        #    - 5002:5001
         container_name: fooapi
         depends_on:
             - nginx
